# bazel-sandbox-windows

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  defs.bzl
docs/: README.md  detours-input-filtering.md  gsoc-proposal-comparison.md  linux-sandbox-comparison.md  projfs-sandbox-modes.md  sandbox-parity-findings.md  vendor-architecture.md
docs/comparison/: linux-sandbox-comparison.md
docs/design/: detours-input-filtering.md  detours-write-overlay-vfs.md  projfs-sandbox-modes.md
docs/e2e/: rules_js-windows-runfiles.md  smoke-testing.md
docs/testing/: test-suite-migration.md
integration/: README.md  bazel-windows-sandbox.patch
src/: BazelSandbox.manifest  detours_compat.h  dll_export_anchor.cpp  main.cpp  manifest_builder.cpp  manifest_builder.h  network_detours.cpp  network_detours.h  overlay_engine.cpp  overlay_engine.h
tests/: BUILD.bazel  manifest_builder_test.cpp  probe.cpp  probe_lpa.manifest  stdio_launcher.cpp
tests/e2e/: BUILD.bazel  README.md  e2e_harness.cc  e2e_harness.h  mode2.ps1  realtools.ps1  smoke-repos.psd1  smoke.ps1
tests/e2e/coreutils/: BUILD.bazel  MODULE.bazel  coreutils.BUILD.bazel  overlay_coreutils_test.cc
tests/e2e/dotnet/: .bazelrc  BUILD.bazel  MODULE.bazel  copy_ops.cs  enum_ops.cs  filter_ops.cs  filter_overlay_ops.cs  fs_ops.cs  overlay_dotnet_test.cc  spawn_ops.cs  writeout_ops.cs
tests/e2e/go/: .bazelrc  BUILD.bazel  MODULE.bazel  ops.go  overlay_go_test.cc
tests/e2e/java/: .bazelrc  BUILD.bazel  EnumOps.java  FilterOps.java  FilterOverlayOps.java  FsOps.java  MODULE.bazel  SpawnOps.java  WriteOut.java  jdk_tools.bzl  overlay_java_test.cc
tests/e2e/msys2/: .bazelrc  BUILD.bazel  MODULE.bazel  msys2.BUILD.bazel  overlay_msys2_test.cc
tests/e2e/native/: .bazelrc  BUILD.bazel  MODULE.bazel  overlay_native_test.cc
tests/e2e/nodejs/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  overlay_nodejs_test.cc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
tests/e2e/nodejs/apps/ng_app/: BUILD.bazel  tsconfig.json
tests/e2e/nodejs/apps/ng_app/src/: app.component.ts
tests/e2e/nodejs/apps/react_app/: BUILD.bazel  index.html  vite.config.js
tests/e2e/nodejs/apps/react_app/src/: App.jsx
tests/e2e/nodejs/scripts/: enum_ops.js  filter_ops.js  filter_overlay_ops.js  fs_ops.js  fs_readback.js  node_modules_stress.js  spawn_ops.js  writeout_ops.js
tests/e2e/python/: .bazelrc  BUILD.bazel  MODULE.bazel  overlay_python_test.cc
tests/e2e/python/scripts/: copy_ops.py  enum_ops.py  filter_ops.py  filter_overlay_ops.py  fs_ops.py  spawn_ops.py  writeout_ops.py
tests/enforce/: enforce_harness.cc  enforce_harness.h  filesystem.ps1  filesystem_test.cc  launcher.ps1  launcher_test.cc  limitations.ps1  limitations_test.cc  modes.ps1  modes_test.cc  network.ps1  network_test.cc  overlay.ps1  overlay_test.cc  pathforms.ps1  pathforms_test.cc  reparse.ps1  reparse_test.cc  scopes.ps1  scopes_test.cc
tests/integration/: README.md  overlay-concurrent-write.ps1  sandbox-strategy-smoke.ps1  smoke-repos.psd1  smoke.ps1
tests/lib/: harness.ps1
