load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:private"])

# Bazel's MSVC toolchain pins /D_WIN32_WINNT=0x0601; re-target Windows 10 so the
# newer file-info APIs the probe exercises are available (matches //BUILD.bazel).
_WIN10_DEFINES = [
    "_WIN32_WINNT=0x0A00",
    "NTDDI_VERSION=0x0A000006",
]

_HELPER_DEFINES = [
    "UNICODE",
    "_UNICODE",
    "WIN32_LEAN_AND_MEAN",
    "NOMINMAX",
] + _WIN10_DEFINES

# ---------------------------------------------------------------------------
# C++ test helpers (plain, un-sandboxed tools invoked by the enforcement tests).
# ---------------------------------------------------------------------------

# Performs a single filesystem/network op and exits with a stable code
# (0=allowed, 10=denied, 20=other, 30=usage, 40=bad std handle, 50=harness).
cc_binary(
    name = "probe",
    srcs = ["probe.cpp"],
    local_defines = _HELPER_DEFINES,
)

# Same probe source, but long-path-aware (its manifest sets longPathAware=true).
# Used only by the long-path limitation test to show a raw >MAX_PATH access is
# enforced correctly when the child is long-path aware. Must sit next to `probe`
# (the harness derives its path from the probe's directory), which holds in
# runfiles because both live in this package's runfiles subdir.
cc_binary(
    name = "probe_lpa",
    srcs = ["probe.cpp"],
    additional_linker_inputs = ["probe_lpa.manifest"],
    linkopts = [
        "/MANIFEST:EMBED",
        "/MANIFESTINPUT:tests/probe_lpa.manifest",
    ],
    local_defines = _HELPER_DEFINES,
)

# Reproduces Bazel's std-handle launch (STARTF_USESTDHANDLES with inheritable
# stdout/stderr but no stdin) and runs "BazelSandbox -- probe stdio".
cc_binary(
    name = "stdio_launcher",
    srcs = ["stdio_launcher.cpp"],
    local_defines = _HELPER_DEFINES,
)

# ---------------------------------------------------------------------------
# Unit test: the manifest serializer (no BuildXL/Detours linked).
# ---------------------------------------------------------------------------
cc_test(
    name = "manifest_unit",
    size = "small",
    srcs = ["manifest_builder_test.cpp"],
    local_defines = _HELPER_DEFINES,
    deps = ["//:manifest_builder"],
)

# ---------------------------------------------------------------------------
# GoogleTest enforcement suite (pilot). Ports tests/enforce/*.ps1 to cc_test:
# each case spawns the real launcher (BazelSandbox -- probe <op>) via
# CreateProcessW and asserts the child's exit code. The launcher + probe
# binaries ride as `data`; their runfiles rlocationpaths are handed to the test
# via env vars (resolved through the rules_cc runfiles library). BazelSandbox
# carries DetoursServices.dll in its runfiles co-located with the exe.
# ---------------------------------------------------------------------------
cc_library(
    name = "enforce_harness_cc",
    testonly = True,
    srcs = ["enforce/enforce_harness.cc"],
    hdrs = ["enforce/enforce_harness.h"],
    linkopts = ["advapi32.lib"],
    local_defines = _HELPER_DEFINES,
    deps = [
        "@googletest//:gtest",
        "@rules_cc//cc/runfiles",
    ],
)

_ENFORCE_ENV = {
    "ENFORCE_SANDBOX": "$(rlocationpath //:BazelSandbox)",
    "ENFORCE_PROBE": "$(rlocationpath :probe)",
    "ENFORCE_PROBE_LPA": "$(rlocationpath :probe_lpa)",
    "ENFORCE_STDIO": "$(rlocationpath :stdio_launcher)",
}

_ENFORCE_DATA = [
    ":probe",
    ":probe_lpa",
    ":stdio_launcher",
    "//:BazelSandbox",
]

# The sandboxed children need the standard Windows variables to initialize and
# be found on PATH under `bazel test`'s scrubbed environment.
_ENFORCE_ENV_INHERIT = [
    "ALLUSERSPROFILE",
    "APPDATA",
    "CommonProgramFiles",
    "ComSpec",
    "HOMEDRIVE",
    "HOMEPATH",
    "LOCALAPPDATA",
    "NUMBER_OF_PROCESSORS",
    "OS",
    "PATH",
    "PATHEXT",
    "PROCESSOR_ARCHITECTURE",
    "ProgramData",
    "ProgramFiles",
    "ProgramFiles(x86)",
    "ProgramW6432",
    "PUBLIC",
    "SystemDrive",
    "SystemRoot",
    "TEMP",
    "TMP",
    "USERPROFILE",
    "WINDIR",
]

cc_test(
    name = "enforce_filesystem_cc",
    size = "small",
    srcs = ["enforce/filesystem_test.cc"],
    data = _ENFORCE_DATA,
    env = _ENFORCE_ENV,
    env_inherit = _ENFORCE_ENV_INHERIT,
    local_defines = _HELPER_DEFINES,
    deps = [
        ":enforce_harness_cc",
        "@googletest//:gtest_main",
    ],
)


# ---------------------------------------------------------------------------
# GoogleTest enforcement suite: one cc_test per category, ported 1:1 from the
# former tests/enforce/*.ps1 scripts. Each case spawns the real launcher via
# CreateProcessW and asserts the sandboxed probe's exit code; the launcher +
# probe binaries ride as `data` and are resolved through the rules_cc runfiles
# library from the env-var rlocationpaths (see enforce_harness.cc).
# ---------------------------------------------------------------------------
_ENFORCE_CATEGORIES = [
    "scopes",
    "network",
    "launcher",
    "pathforms",
    "reparse",
    "limitations",
    "modes",
    "overlay",
]

[
    cc_test(
        name = "enforce_{}_cc".format(category),
        size = "small",
        srcs = ["enforce/{}_test.cc".format(category)],
        data = _ENFORCE_DATA,
        env = _ENFORCE_ENV,
        env_inherit = _ENFORCE_ENV_INHERIT,
        local_defines = _HELPER_DEFINES,
        deps = [
            ":enforce_harness_cc",
            "@googletest//:gtest_main",
        ],
    )
    for category in _ENFORCE_CATEGORIES
]
