load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_go//go:def.bzl", "go_binary")

# Windows target + Unicode defines matching the shared harness / root targets.
_HELPER_DEFINES = [
    "UNICODE",
    "_UNICODE",
    "WIN32_LEAN_AND_MEAN",
    "NOMINMAX",
    "_WIN32_WINNT=0x0A00",
    "NTDDI_VERSION=0x0A000006",
]

# Sandboxed children (the Go binary + its os/exec grandchild) need the standard
# Windows variables to initialize under `bazel test`'s scrubbed environment.
_ENV_INHERIT = [
    "ALLUSERSPROFILE",
    "APPDATA",
    "CommonProgramFiles",
    "ComSpec",
    "HOMEDRIVE",
    "HOMEPATH",
    "LOCALAPPDATA",
    "NUMBER_OF_PROCESSORS",
    "OS",
    "PATH",
    "PATHEXT",
    "PROCESSOR_ARCHITECTURE",
    "ProgramData",
    "ProgramFiles",
    "ProgramFiles(x86)",
    "ProgramW6432",
    "PUBLIC",
    "SystemDrive",
    "SystemRoot",
    "TEMP",
    "TMP",
    "USERPROFILE",
    "WINDIR",
]

# Go program (op dispatched on argv[1]) exercising the overlay through the Go
# runtime's OS-API calls, plus the spawncwd cwd-overlay regression. A go_binary
# links statically, so the .exe runs under the sandbox with no runtime deps.
go_binary(
    name = "ops",
    srcs = ["ops.go"],
    visibility = ["//visibility:public"],
)

# Write-overlay VFS e2e: drives BazelSandbox against the hermetic Go binary and
# asserts overlay read-after-write, an enumeration splice, an unchanged real
# execroot, input-filtering, the combined filter+overlay edge cases, and the
# CreateProcess working-directory overlay redirect (spawncwd). The binary and
# BazelSandbox (with its co-located DetoursServices.dll) ride as `data`; their
# runfiles rlocationpaths are handed to the test via env vars.
cc_test(
    name = "overlay_go",
    size = "small",
    srcs = ["overlay_go_test.cc"],
    data = [
        ":ops",
        "@bazel_sandbox_windows//:BazelSandbox",
    ],
    env = {
        "E2E_SANDBOX": "$(rlocationpath @bazel_sandbox_windows//:BazelSandbox)",
        "E2E_GO_OPS": "$(rlocationpath :ops)",
    },
    env_inherit = _ENV_INHERIT,
    local_defines = _HELPER_DEFINES,
    deps = [
        "@bazel_sandbox_windows//tests/e2e:e2e_harness",
        "@googletest//:gtest_main",
    ],
)
